# AgroML-Hub

./: CONTRIBUTING.md  README.md  SECURITY.md
backend/: README.md  pom.xml
documentation/: Forest_Router.md  Mushrooms_Router.md  Seeds_Router.md
frontend/: README.md  index.html  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: PredictionReport.tsx  PredictionResults.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Admin.tsx  Auth.tsx  Dashboard.tsx  History.tsx  Index.tsx  (+3 more)
models/: pyproject.toml
models/datasets/: Seed_Data.csv
models/notebooks/: mushrooms_feature_label_encoders.pkl  mushrooms_target_label_encoder.pkl  scikit_forest.ipynb  scikit_mushrooms.ipynb  scikit_seeds.ipynb  tensorflow_forest.ipynb  tensorflow_mushrooms.ipynb  tensorflow_seeds.ipynb  xgboost_forest.ipynb  xgboost_mushrooms.ipynb  xgboost_seeds.ipynb
models/scikit_models/: random_Seeds_model.pkl  random_mushrooms_model.pkl
models/scripts/: scikit_forest.py  scikit_mushrooms.py  scikit_seeds.py  tensorflow_forest.py  tensorflow_mushrooms.py  tensorflow_seeds.py  xgboost_forest.py  xgboost_mushrooms.py  xgboost_seeds.py
models/server/: main.py
models/server/routers/: forest_router.py  mushroom_router.py  seeds_router.py
models/tensorflow_models/: mushroom_model.keras  seeds_model.keras
models/tensorflow_quantized_model/: forest_cover_model_quantized.tflite  mushroom_model_quantized.tflite  seeds_model_quantized.tflite
models/xgboost_models/: xgboost_mushrooms_complete.pkl  xgboost_mushrooms_model.pkl  xgboost_wheat_seeds_complete.pkl
(+29 files in other folders)
