[project]
name = "models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.4",
]
